tjs2/syntax/tjsdate.output
Grammar

    0 $accept: input $end

    1 input: date_time_string

    2 date_time_string: wday_omittable DP_NUMBER month DP_NUMBER time tz_omittable
    3                 | wday_omittable DP_NUMBER '-' month DP_NUMBER time tz_omittable
    4                 | wday_omittable DP_NUMBER '-' month '-' DP_NUMBER time tz_omittable
    5                 | wday_omittable month DP_NUMBER DP_NUMBER time tz_omittable
    6                 | wday_omittable month '-' DP_NUMBER DP_NUMBER time tz_omittable
    7                 | wday_omittable month '-' DP_NUMBER '-' DP_NUMBER time tz_omittable
    8                 | wday_omittable DP_NUMBER month time DP_NUMBER tz_omittable
    9                 | wday_omittable DP_NUMBER '-' month time DP_NUMBER tz_omittable
   10                 | wday_omittable month DP_NUMBER time DP_NUMBER tz_omittable
   11                 | wday_omittable month '-' DP_NUMBER time DP_NUMBER tz_omittable
   12                 | wday_omittable DP_NUMBER hyphen_or_slash DP_NUMBER hyphen_or_slash DP_NUMBER time tz_omittable

   13 wday: DP_WDAY

   14 wday_omittable: wday ','
   15               | wday
   16               | /* empty */

   17 month: DP_MONTH

   18 hyphen_or_slash: '-'
   19                | '/'

   20 time_sub_sec_omittable: '.' DP_NUMBER
   21                       | /* empty */

   22 time_hms: DP_NUMBER ':' DP_NUMBER ':' DP_NUMBER time_sub_sec_omittable
   23         | DP_NUMBER ':' DP_NUMBER

   24 am_or_pm: DP_AM
   25         | DP_PM

   26 time: time_hms
   27     | am_or_pm time_hms
   28     | time_hms am_or_pm

   29 tz_name_omittable: DP_TZ
   30                  | /* empty */

   31 tz_offset_omittable: '+' DP_NUMBER
   32                    | '-' DP_NUMBER
   33                    | /* empty */

   34 @1: /* empty */

   35 tz_desc_omittable: '(' @1 ')'
   36                  | /* empty */

   37 tz_omittable: tz_name_omittable tz_offset_omittable tz_desc_omittable


Terminals, with rules where they appear

$end (0) 0
'(' (40) 35
')' (41) 35
'+' (43) 31
',' (44) 14
'-' (45) 3 4 6 7 9 11 18 32
'.' (46) 20
'/' (47) 19
':' (58) 22 23
error (256)
DP_AM (258) 24
DP_PM (259) 25
DP_NUMBER (260) 2 3 4 5 6 7 8 9 10 11 12 20 22 23 31 32
DP_MONTH (261) 17
DP_WDAY (262) 13
DP_TZ (263) 29


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
input (18)
    on left: 1, on right: 0
date_time_string (19)
    on left: 2 3 4 5 6 7 8 9 10 11 12, on right: 1
wday (20)
    on left: 13, on right: 14 15
wday_omittable (21)
    on left: 14 15 16, on right: 2 3 4 5 6 7 8 9 10 11 12
month (22)
    on left: 17, on right: 2 3 4 5 6 7 8 9 10 11
hyphen_or_slash (23)
    on left: 18 19, on right: 12
time_sub_sec_omittable (24)
    on left: 20 21, on right: 22
time_hms (25)
    on left: 22 23, on right: 26 27 28
am_or_pm (26)
    on left: 24 25, on right: 27 28
time (27)
    on left: 26 27 28, on right: 2 3 4 5 6 7 8 9 10 11 12
tz_name_omittable (28)
    on left: 29 30, on right: 37
tz_offset_omittable (29)
    on left: 31 32 33, on right: 37
tz_desc_omittable (30)
    on left: 35 36, on right: 37
@1 (31)
    on left: 34, on right: 35
tz_omittable (32)
    on left: 37, on right: 2 3 4 5 6 7 8 9 10 11 12


state 0

    0 $accept: . input $end

    DP_WDAY  shift, and go to state 1

    $default  reduce using rule 16 (wday_omittable)

    input             go to state 2
    date_time_string  go to state 3
    wday              go to state 4
    wday_omittable    go to state 5


state 1

   13 wday: DP_WDAY .

    $default  reduce using rule 13 (wday)


state 2

    0 $accept: input . $end

    $end  shift, and go to state 6


state 3

    1 input: date_time_string .

    $default  reduce using rule 1 (input)


state 4

   14 wday_omittable: wday . ','
   15               | wday .

    ','  shift, and go to state 7

    $default  reduce using rule 15 (wday_omittable)


state 5

    2 date_time_string: wday_omittable . DP_NUMBER month DP_NUMBER time tz_omittable
    3                 | wday_omittable . DP_NUMBER '-' month DP_NUMBER time tz_omittable
    4                 | wday_omittable . DP_NUMBER '-' month '-' DP_NUMBER time tz_omittable
    5                 | wday_omittable . month DP_NUMBER DP_NUMBER time tz_omittable
    6                 | wday_omittable . month '-' DP_NUMBER DP_NUMBER time tz_omittable
    7                 | wday_omittable . month '-' DP_NUMBER '-' DP_NUMBER time tz_omittable
    8                 | wday_omittable . DP_NUMBER month time DP_NUMBER tz_omittable
    9                 | wday_omittable . DP_NUMBER '-' month time DP_NUMBER tz_omittable
   10                 | wday_omittable . month DP_NUMBER time DP_NUMBER tz_omittable
   11                 | wday_omittable . month '-' DP_NUMBER time DP_NUMBER tz_omittable
   12                 | wday_omittable . DP_NUMBER hyphen_or_slash DP_NUMBER hyphen_or_slash DP_NUMBER time tz_omittable

    DP_NUMBER  shift, and go to state 8
    DP_MONTH   shift, and go to state 9

    month  go to state 10


state 6

    0 $accept: input $end .

    $default  accept


state 7

   14 wday_omittable: wday ',' .

    $default  reduce using rule 14 (wday_omittable)


state 8

    2 date_time_string: wday_omittable DP_NUMBER . month DP_NUMBER time tz_omittable
    3                 | wday_omittable DP_NUMBER . '-' month DP_NUMBER time tz_omittable
    4                 | wday_omittable DP_NUMBER . '-' month '-' DP_NUMBER time tz_omittable
    8                 | wday_omittable DP_NUMBER . month time DP_NUMBER tz_omittable
    9                 | wday_omittable DP_NUMBER . '-' month time DP_NUMBER tz_omittable
   12                 | wday_omittable DP_NUMBER . hyphen_or_slash DP_NUMBER hyphen_or_slash DP_NUMBER time tz_omittable

    DP_MONTH  shift, and go to state 9
    '-'       shift, and go to state 11
    '/'       shift, and go to state 12

    month            go to state 13
    hyphen_or_slash  go to state 14


state 9

   17 month: DP_MONTH .

    $default  reduce using rule 17 (month)


state 10

    5 date_time_string: wday_omittable month . DP_NUMBER DP_NUMBER time tz_omittable
    6                 | wday_omittable month . '-' DP_NUMBER DP_NUMBER time tz_omittable
    7                 | wday_omittable month . '-' DP_NUMBER '-' DP_NUMBER time tz_omittable
   10                 | wday_omittable month . DP_NUMBER time DP_NUMBER tz_omittable
   11                 | wday_omittable month . '-' DP_NUMBER time DP_NUMBER tz_omittable

    DP_NUMBER  shift, and go to state 15
    '-'        shift, and go to state 16


state 11

    3 date_time_string: wday_omittable DP_NUMBER '-' . month DP_NUMBER time tz_omittable
    4                 | wday_omittable DP_NUMBER '-' . month '-' DP_NUMBER time tz_omittable
    9                 | wday_omittable DP_NUMBER '-' . month time DP_NUMBER tz_omittable
   18 hyphen_or_slash: '-' .

    DP_MONTH  shift, and go to state 9

    $default  reduce using rule 18 (hyphen_or_slash)

    month  go to state 17


state 12

   19 hyphen_or_slash: '/' .

    $default  reduce using rule 19 (hyphen_or_slash)


state 13

    2 date_time_string: wday_omittable DP_NUMBER month . DP_NUMBER time tz_omittable
    8                 | wday_omittable DP_NUMBER month . time DP_NUMBER tz_omittable

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 20

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 23


state 14

   12 date_time_string: wday_omittable DP_NUMBER hyphen_or_slash . DP_NUMBER hyphen_or_slash DP_NUMBER time tz_omittable

    DP_NUMBER  shift, and go to state 24


state 15

    5 date_time_string: wday_omittable month DP_NUMBER . DP_NUMBER time tz_omittable
   10                 | wday_omittable month DP_NUMBER . time DP_NUMBER tz_omittable

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 25

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 26


state 16

    6 date_time_string: wday_omittable month '-' . DP_NUMBER DP_NUMBER time tz_omittable
    7                 | wday_omittable month '-' . DP_NUMBER '-' DP_NUMBER time tz_omittable
   11                 | wday_omittable month '-' . DP_NUMBER time DP_NUMBER tz_omittable

    DP_NUMBER  shift, and go to state 27


state 17

    3 date_time_string: wday_omittable DP_NUMBER '-' month . DP_NUMBER time tz_omittable
    4                 | wday_omittable DP_NUMBER '-' month . '-' DP_NUMBER time tz_omittable
    9                 | wday_omittable DP_NUMBER '-' month . time DP_NUMBER tz_omittable

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 28
    '-'        shift, and go to state 29

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 30


state 18

   24 am_or_pm: DP_AM .

    $default  reduce using rule 24 (am_or_pm)


state 19

   25 am_or_pm: DP_PM .

    $default  reduce using rule 25 (am_or_pm)


state 20

    2 date_time_string: wday_omittable DP_NUMBER month DP_NUMBER . time tz_omittable
   22 time_hms: DP_NUMBER . ':' DP_NUMBER ':' DP_NUMBER time_sub_sec_omittable
   23         | DP_NUMBER . ':' DP_NUMBER

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 31
    ':'        shift, and go to state 32

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 33


state 21

   26 time: time_hms .
   28     | time_hms . am_or_pm

    DP_AM  shift, and go to state 18
    DP_PM  shift, and go to state 19

    $default  reduce using rule 26 (time)

    am_or_pm  go to state 34


state 22

   27 time: am_or_pm . time_hms

    DP_NUMBER  shift, and go to state 31

    time_hms  go to state 35


state 23

    8 date_time_string: wday_omittable DP_NUMBER month time . DP_NUMBER tz_omittable

    DP_NUMBER  shift, and go to state 36


state 24

   12 date_time_string: wday_omittable DP_NUMBER hyphen_or_slash DP_NUMBER . hyphen_or_slash DP_NUMBER time tz_omittable

    '-'  shift, and go to state 37
    '/'  shift, and go to state 12

    hyphen_or_slash  go to state 38


state 25

    5 date_time_string: wday_omittable month DP_NUMBER DP_NUMBER . time tz_omittable
   22 time_hms: DP_NUMBER . ':' DP_NUMBER ':' DP_NUMBER time_sub_sec_omittable
   23         | DP_NUMBER . ':' DP_NUMBER

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 31
    ':'        shift, and go to state 32

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 39


state 26

   10 date_time_string: wday_omittable month DP_NUMBER time . DP_NUMBER tz_omittable

    DP_NUMBER  shift, and go to state 40


state 27

    6 date_time_string: wday_omittable month '-' DP_NUMBER . DP_NUMBER time tz_omittable
    7                 | wday_omittable month '-' DP_NUMBER . '-' DP_NUMBER time tz_omittable
   11                 | wday_omittable month '-' DP_NUMBER . time DP_NUMBER tz_omittable

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 41
    '-'        shift, and go to state 42

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 43


state 28

    3 date_time_string: wday_omittable DP_NUMBER '-' month DP_NUMBER . time tz_omittable
   22 time_hms: DP_NUMBER . ':' DP_NUMBER ':' DP_NUMBER time_sub_sec_omittable
   23         | DP_NUMBER . ':' DP_NUMBER

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 31
    ':'        shift, and go to state 32

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 44


state 29

    4 date_time_string: wday_omittable DP_NUMBER '-' month '-' . DP_NUMBER time tz_omittable

    DP_NUMBER  shift, and go to state 45


state 30

    9 date_time_string: wday_omittable DP_NUMBER '-' month time . DP_NUMBER tz_omittable

    DP_NUMBER  shift, and go to state 46


state 31

   22 time_hms: DP_NUMBER . ':' DP_NUMBER ':' DP_NUMBER time_sub_sec_omittable
   23         | DP_NUMBER . ':' DP_NUMBER

    ':'  shift, and go to state 32


state 32

   22 time_hms: DP_NUMBER ':' . DP_NUMBER ':' DP_NUMBER time_sub_sec_omittable
   23         | DP_NUMBER ':' . DP_NUMBER

    DP_NUMBER  shift, and go to state 47


state 33

    2 date_time_string: wday_omittable DP_NUMBER month DP_NUMBER time . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 50


state 34

   28 time: time_hms am_or_pm .

    $default  reduce using rule 28 (time)


state 35

   27 time: am_or_pm time_hms .

    $default  reduce using rule 27 (time)


state 36

    8 date_time_string: wday_omittable DP_NUMBER month time DP_NUMBER . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 51


state 37

   18 hyphen_or_slash: '-' .

    $default  reduce using rule 18 (hyphen_or_slash)


state 38

   12 date_time_string: wday_omittable DP_NUMBER hyphen_or_slash DP_NUMBER hyphen_or_slash . DP_NUMBER time tz_omittable

    DP_NUMBER  shift, and go to state 52


state 39

    5 date_time_string: wday_omittable month DP_NUMBER DP_NUMBER time . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 53


state 40

   10 date_time_string: wday_omittable month DP_NUMBER time DP_NUMBER . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 54


state 41

    6 date_time_string: wday_omittable month '-' DP_NUMBER DP_NUMBER . time tz_omittable
   22 time_hms: DP_NUMBER . ':' DP_NUMBER ':' DP_NUMBER time_sub_sec_omittable
   23         | DP_NUMBER . ':' DP_NUMBER

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 31
    ':'        shift, and go to state 32

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 55


state 42

    7 date_time_string: wday_omittable month '-' DP_NUMBER '-' . DP_NUMBER time tz_omittable

    DP_NUMBER  shift, and go to state 56


state 43

   11 date_time_string: wday_omittable month '-' DP_NUMBER time . DP_NUMBER tz_omittable

    DP_NUMBER  shift, and go to state 57


state 44

    3 date_time_string: wday_omittable DP_NUMBER '-' month DP_NUMBER time . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 58


state 45

    4 date_time_string: wday_omittable DP_NUMBER '-' month '-' DP_NUMBER . time tz_omittable

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 31

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 59


state 46

    9 date_time_string: wday_omittable DP_NUMBER '-' month time DP_NUMBER . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 60


state 47

   22 time_hms: DP_NUMBER ':' DP_NUMBER . ':' DP_NUMBER time_sub_sec_omittable
   23         | DP_NUMBER ':' DP_NUMBER .

    ':'  shift, and go to state 61

    $default  reduce using rule 23 (time_hms)


state 48

   29 tz_name_omittable: DP_TZ .

    $default  reduce using rule 29 (tz_name_omittable)


state 49

   37 tz_omittable: tz_name_omittable . tz_offset_omittable tz_desc_omittable

    '-'  shift, and go to state 62
    '+'  shift, and go to state 63

    $default  reduce using rule 33 (tz_offset_omittable)

    tz_offset_omittable  go to state 64


state 50

    2 date_time_string: wday_omittable DP_NUMBER month DP_NUMBER time tz_omittable .

    $default  reduce using rule 2 (date_time_string)


state 51

    8 date_time_string: wday_omittable DP_NUMBER month time DP_NUMBER tz_omittable .

    $default  reduce using rule 8 (date_time_string)


state 52

   12 date_time_string: wday_omittable DP_NUMBER hyphen_or_slash DP_NUMBER hyphen_or_slash DP_NUMBER . time tz_omittable

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 31

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 65


state 53

    5 date_time_string: wday_omittable month DP_NUMBER DP_NUMBER time tz_omittable .

    $default  reduce using rule 5 (date_time_string)


state 54

   10 date_time_string: wday_omittable month DP_NUMBER time DP_NUMBER tz_omittable .

    $default  reduce using rule 10 (date_time_string)


state 55

    6 date_time_string: wday_omittable month '-' DP_NUMBER DP_NUMBER time . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 66


state 56

    7 date_time_string: wday_omittable month '-' DP_NUMBER '-' DP_NUMBER . time tz_omittable

    DP_AM      shift, and go to state 18
    DP_PM      shift, and go to state 19
    DP_NUMBER  shift, and go to state 31

    time_hms  go to state 21
    am_or_pm  go to state 22
    time      go to state 67


state 57

   11 date_time_string: wday_omittable month '-' DP_NUMBER time DP_NUMBER . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 68


state 58

    3 date_time_string: wday_omittable DP_NUMBER '-' month DP_NUMBER time tz_omittable .

    $default  reduce using rule 3 (date_time_string)


state 59

    4 date_time_string: wday_omittable DP_NUMBER '-' month '-' DP_NUMBER time . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 69


state 60

    9 date_time_string: wday_omittable DP_NUMBER '-' month time DP_NUMBER tz_omittable .

    $default  reduce using rule 9 (date_time_string)


state 61

   22 time_hms: DP_NUMBER ':' DP_NUMBER ':' . DP_NUMBER time_sub_sec_omittable

    DP_NUMBER  shift, and go to state 70


state 62

   32 tz_offset_omittable: '-' . DP_NUMBER

    DP_NUMBER  shift, and go to state 71


state 63

   31 tz_offset_omittable: '+' . DP_NUMBER

    DP_NUMBER  shift, and go to state 72


state 64

   37 tz_omittable: tz_name_omittable tz_offset_omittable . tz_desc_omittable

    '('  shift, and go to state 73

    $default  reduce using rule 36 (tz_desc_omittable)

    tz_desc_omittable  go to state 74


state 65

   12 date_time_string: wday_omittable DP_NUMBER hyphen_or_slash DP_NUMBER hyphen_or_slash DP_NUMBER time . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 75


state 66

    6 date_time_string: wday_omittable month '-' DP_NUMBER DP_NUMBER time tz_omittable .

    $default  reduce using rule 6 (date_time_string)


state 67

    7 date_time_string: wday_omittable month '-' DP_NUMBER '-' DP_NUMBER time . tz_omittable

    DP_TZ  shift, and go to state 48

    $default  reduce using rule 30 (tz_name_omittable)

    tz_name_omittable  go to state 49
    tz_omittable       go to state 76


state 68

   11 date_time_string: wday_omittable month '-' DP_NUMBER time DP_NUMBER tz_omittable .

    $default  reduce using rule 11 (date_time_string)


state 69

    4 date_time_string: wday_omittable DP_NUMBER '-' month '-' DP_NUMBER time tz_omittable .

    $default  reduce using rule 4 (date_time_string)


state 70

   22 time_hms: DP_NUMBER ':' DP_NUMBER ':' DP_NUMBER . time_sub_sec_omittable

    '.'  shift, and go to state 77

    $default  reduce using rule 21 (time_sub_sec_omittable)

    time_sub_sec_omittable  go to state 78


state 71

   32 tz_offset_omittable: '-' DP_NUMBER .

    $default  reduce using rule 32 (tz_offset_omittable)


state 72

   31 tz_offset_omittable: '+' DP_NUMBER .

    $default  reduce using rule 31 (tz_offset_omittable)


state 73

   35 tz_desc_omittable: '(' . @1 ')'

    $default  reduce using rule 34 (@1)

    @1  go to state 79


state 74

   37 tz_omittable: tz_name_omittable tz_offset_omittable tz_desc_omittable .

    $default  reduce using rule 37 (tz_omittable)


state 75

   12 date_time_string: wday_omittable DP_NUMBER hyphen_or_slash DP_NUMBER hyphen_or_slash DP_NUMBER time tz_omittable .

    $default  reduce using rule 12 (date_time_string)


state 76

    7 date_time_string: wday_omittable month '-' DP_NUMBER '-' DP_NUMBER time tz_omittable .

    $default  reduce using rule 7 (date_time_string)


state 77

   20 time_sub_sec_omittable: '.' . DP_NUMBER

    DP_NUMBER  shift, and go to state 80


state 78

   22 time_hms: DP_NUMBER ':' DP_NUMBER ':' DP_NUMBER time_sub_sec_omittable .

    $default  reduce using rule 22 (time_hms)


state 79

   35 tz_desc_omittable: '(' @1 . ')'

    ')'  shift, and go to state 81


state 80

   20 time_sub_sec_omittable: '.' DP_NUMBER .

    $default  reduce using rule 20 (time_sub_sec_omittable)


state 81

   35 tz_desc_omittable: '(' @1 ')' .

    $default  reduce using rule 35 (tz_desc_omittable)
